# CGame

./: AnimatedEnemy.cpp  AnimatedEnemy.h  Background.cpp  Background.h  CMakeLists.txt  ExampleGame.cpp  GUI.cpp  GUI.h  GameEngine.cpp  GameEngine.h  MovingSprite.cpp  MovingSprite.h  NPCSprite.cpp  NPCSprite.h  PlayerSprite.cpp  PlayerSprite.h  Sprite.cpp  Sprite.h  TextSprite.cpp  TextSprite.h  main.cpp  readme.md
